--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -119,4 +119,26 @@ display: inline-block;
            transition: border-color .15s ease-in-out,
            box-shadow .15s ease-in-out;
     }
-   
+
+   .checkBox{
+       display:block;
+       margin-top: 2%;
+      
+    
+       padding: .375rem .75rem;
+       font-size: 1rem;
+       font-weight: 400;
+       line-height: 1.5;
+       color: #6e707e;
+       background-color: #fff;
+       background-clip: padding-box;
+       border: 1px transparent #d1d3e2;
+       border-radius: .35rem;
+       transition: border-color .15s ease-in-out,
+       box-shadow .15s ease-in-out;
+       }
+   .check{
+    
+    display: block;
+   }
+  
